--- a/indice/templates/index.html
+++ b/indice/templates/index.html
@@ -42,9 +42,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Registrarse</a></li>
-          <li><a class="nav-link scrollto active" href="#hero">Iniciar sesión</a></li>
-          <li><a class="nav-link scrollto active" href="#hero">Cerrar sesión</a></li>
+          <li><a class="nav-link scrollto active" href={% url 'inicio' %}>Inicio</a></li> 
+          <li><a class="nav-link scrollto active" href={% url 'inicio' %}>Registrarse</a></li>
+          <li><a class="nav-link scrollto active" href={% url 'inicio' %}>Iniciar sesión</a></li>
+          <li><a class="nav-link scrollto active" href={% url 'inicio' %}>Cerrar sesión</a></li>
           </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -55,7 +56,7 @@
 
   <main id="main">
 
-
+{% block a %}
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
@@ -71,33 +72,34 @@
         <div class="row">
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <h4><a href="#">Comidas</a></h4>
+              <h4><a href={% url 'formulario_comidas' %}>Comidas</a></h4>
                 <p>Hay muchas comidas en el mundo pero lamentablemente tenemos un limite. No por eso nos vamos
                   a detener! Siempre estaremos intentando traer nuevas ricas comidas!</p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
-              <h4><a href="#">Bebidas</a></h4>
+              <h4><a href={% url 'formulario_bebidas' %}>Bebidas</a></h4>
               <p>Elige tu bebida favorita y deleitate con su sabor!</p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
-              <h4><a href="#">Empleados</a></h4>
+              <h4><a href={% url 'formulario_empleados' %}>Empleados</a></h4>
               <p>En este apartado puedes encontrar informacion sobre las personas que trabajan con nosotros!</p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="400">
             <div class="icon-box">
-              <h4><a href="#">Mesas</a></h4>
+              <h4><a href={% url 'formulario_mesas' %}>Mesas</a></h4>
               <p>Aqui puedes reservar mesas e incluso saber cuales hay!</p>
             </div>
           </div>
         </div>
-
       </div>
     </section><!-- End Services Section -->
+
+    {% endblock a %}
 
   <!-- Vendor JS Files -->
   <script src="http://127.0.0.1:8000/static/assets/vendor/aos/aos.js"></script>
