--- a/Restaurante/templates/formulario_empleados.html
+++ b/Restaurante/templates/formulario_empleados.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 
 {% block a %}
-{% endblock a %}
-<form action={% url 'formulario_empleados' %} method = "post">
+
+<form action="{% url 'formulario_empleados' %}" method = "post">
     {% csrf_token %}
 
     <table>
@@ -10,3 +10,24 @@
     </table>
     <input type="submit" placeholder="Crear">
 </form>
+
+
+<form action="{% url "formulario_empleados" %}" method="get">
+    {% csrf_token %}   
+
+    <table>
+        {{buscador.as_table}}
+    </table>
+
+    <input type="submit" placeholder="Buscar" >
+</form>
+
+
+
+{% for Empleado in Empleados_buscados %}
+    <li>
+        {{Empleado}}
+    </li>
+{% endfor %}
+
+{% endblock a %}
