--- a/Restaurante/templates/formulario_bebidas.html
+++ b/Restaurante/templates/formulario_bebidas.html
@@ -1,37 +1,12 @@
 {% extends 'index.html' %}
 
 {% block a %}
-
-<form action="{% url 'formulario_bebidas' %}" method = "post">
+{% endblock a %}    
+<form action={% url 'formulario_bebidas' %} method = "post">
     {% csrf_token %}
 
     <table>
         {{formulario.as_table}}
     </table>
-
     <input type="submit" placeholder="Crear">
 </form>
-
-
-
-<form action="{% url "formulario_bebidas" %}" method= "get">
-    {% csrf_token %}   
-
-    <table>
-        {{buscador.as_table}}
-    </table>
-
-    <input type="submit" placeholder="Buscar" >
-</form>
-
-
-
-{% for Bebida in Bebidas_buscadas %}
-    <li>
-        {{Bebida}}
-    </li>
-{% endfor %}
-
-{% endblock a %}  
-
-
