--- a/Restaurante/templates/formulario_comidas.html
+++ b/Restaurante/templates/formulario_comidas.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 
 {% block a %}
-
-<form action="{% url 'formulario_comidas' %}" method = "post">
+{% endblock a %}
+<form action={% url 'formulario_comidas' %} method = "post">
     {% csrf_token %}
 
     <table>
@@ -10,24 +10,3 @@
     </table>
     <input type="submit" placeholder="Crear">
 </form>
-
-
-<form action="{% url "formulario_comidas" %}" method="get">
-    {% csrf_token %}   
-
-    <table>
-        {{buscador.as_table}}
-    </table>
-
-    <input type="submit" placeholder="Buscar" >
-</form>
-
-
-
-{% for Comida in Comidas_buscadas %}
-    <li>
-        {{Comida}}
-    </li>
-{% endfor %}
-
-{% endblock a %}
