--- a/Restaurante/templates/restaurante/formulario_comidas.html
+++ b/Restaurante/templates/restaurante/formulario_comidas.html
@@ -1,12 +1,15 @@
 {% extends 'index.html' %}
 
 {% block a %}
-{% endblock a %}
-<form action={% url 'formulario_comidas' %} method = "post">
+
+<form action="{% url 'formulario_comidas' %}" method = "post">
     {% csrf_token %}
 
     <table>
         {{formulario.as_table}}
     </table>
+    
     <input type="submit" placeholder="Crear">
 </form>
+
+{% endblock a %}
