--- a/Restaurante/templates/restaurante/formulario_empleados.html
+++ b/Restaurante/templates/restaurante/formulario_empleados.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 
 {% block a %}
-{% endblock a %}    
-<form action={% url 'formulario_bebidas' %} method = "post">
+
+<form action="{% url 'formulario_empleados' %}" method = "post">
     {% csrf_token %}
 
     <table>
@@ -10,3 +10,5 @@
     </table>
     <input type="submit" placeholder="Crear">
 </form>
+
+{% endblock a %}
