Septimo commit, editar usuario

--- a/indice/templates/index.html
+++ b/indice/templates/index.html
@@ -45,6 +45,7 @@
           <li><a class="nav-link scrollto active" href={% url 'inicio' %}>Inicio</a></li> 
           <li><a class="nav-link scrollto active" href={% url 'registrar' %}>Registrarse</a></li>
           <li><a class="nav-link scrollto active" href={% url 'login' %}>Iniciar sesión</a></li>
+          <li><a class="nav-link scrollto active" href={% url 'editar_user' %}>Editar usuario</a></li>
           <li><a class="nav-link scrollto active" href={% url 'logout' %}>Cerrar sesión</a></li>
           </li>
         </ul>
