--- a/Restaurante/templates/restaurante/formulario_bebidas.html
+++ b/Restaurante/templates/restaurante/formulario_bebidas.html
@@ -8,7 +8,7 @@
     <table>
         {{formulario.as_table}}
     </table>
-    <input type="submit" placeholder="Crear">
+    <button>Crear</button>
 </form>
 
 {% endblock a %}    
