--- a/Restaurante/templates/restaurante/formulario_comidas.html
+++ b/Restaurante/templates/restaurante/formulario_comidas.html
@@ -9,7 +9,7 @@
         {{formulario.as_table}}
     </table>
     
-    <input type="submit" placeholder="Crear">
+    <button>Crear</button>
 </form>
 
 {% endblock a %}
