Decimo commit, solución errores 2

--- a/Restaurante/templates/listados/listado_comidas.html
+++ b/Restaurante/templates/listados/listado_comidas.html
@@ -8,6 +8,8 @@
 {% for comida in listado_comidas %}
 
 <li>
+    {{comida.clasificacion_en_carta}}: 
+    
     {{comida.nombre}}
     {% if comida.grande %}
         Tamaño: Grande
