--- a/indice/templates/index.html
+++ b/indice/templates/index.html
@@ -55,6 +55,7 @@
           <li><a class="nav-link scrollto active" href={% url 'registrar' %}>Registrarse</a></li>
           
           {% endif %}
+          <li><a class="nav-link scrollto active" href={% url 'about' %}>Sobre mí</a></li> 
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -88,7 +89,7 @@
         <div class="row">
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <h4><a href={% url 'listado_comidas' %}>Comidas</a></h4>
+              <h4><a>Comidas</a></h4><h6><a href={% url 'listado_comidas' %}>Leer más</a></h6>
                 <p>Hay muchas comidas en el mundo pero lamentablemente tenemos un limite. No por eso nos vamos
                   a detener! Siempre estaremos intentando traer nuevas ricas comidas!</p>
             </div>
