Decimo primero commit, solución errores 3

--- a/Restaurante/templates/actualizar/empleados.html
+++ b/Restaurante/templates/actualizar/empleados.html
@@ -1,11 +1,15 @@
 {% extends 'index.html' %}
 
-<form action={% url "actualizar_empleado" estudiante.id %} method = "post">
+{% block a %}
+
+<form action={% url 'actualizar_empleado' empleado.id %} method = "post">
     {% csrf_token %}
 
     <table>
         {{formulario.as_table}}
     </table>
 
-    <input type="submit" placeholder="Actualizar">
+    <button>Actualizar</button>
 </form>
+
+{% endblock a %}
