--- a/Restaurante/templates/listados/listado_bebidas.html
+++ b/Restaurante/templates/listados/listado_bebidas.html
@@ -4,6 +4,9 @@
 
 <a style="text-align: left" href= {% url "listado_bebidas" %}>Crear una bebida</a>
 
+<h1 style="text-align: left">Bebidas</h1>
+<h4 style="text-align: left; margin-left: 10px">¡Encuentre las Bebidas que les guste aquí!</h4>
+
 <ul style="text-align: left">
 
 {% for bebida in listado_bebidas %}
