--- a/Restaurante/templates/listados/listado_empleados.html
+++ b/Restaurante/templates/listados/listado_empleados.html
@@ -4,7 +4,11 @@
 
 <a style="text-align: left" href= {% url "formulario_empleados" %}>Crear un empleado</a>
 
+<h1 style="text-align: left">Empleados</h1>
+<h4 style="text-align: left; margin-left: 10px">¡Encuentre a todos nuestros empleados aquí!</h4>
+
 <ul style="text-align: left">
+
 {% for empleado in listado_empleados %}
 
 <li>
