--- a/Restaurante/templates/listados/listado_mesas.html
+++ b/Restaurante/templates/listados/listado_mesas.html
@@ -4,6 +4,9 @@
 
 <a style="text-align: left" href= {% url "formulario_mesas" %}>Crear una mesa</a>
 
+<h1 style="text-align: left">Mesas</h1>
+<h4 style="text-align: left; margin-left: 10px">¡Busque todas nuestras mesas disponibles aquí!</h4>
+
 <ul style="text-align: left">
 {% for mesa in listado_mesas %}
 
