--- a/indice/templates/index.html
+++ b/indice/templates/index.html
@@ -89,26 +89,26 @@
         <div class="row">
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <h4><a>Comidas</a></h4><h6><a href={% url 'listado_comidas' %}>Leer más</a></h6>
+              <h4><a>Comidas</a><a style="font-size: 12px; margin-left:10px" href={% url 'listado_comidas' %}>(Leer más)</a></h4>
                 <p>Hay muchas comidas en el mundo pero lamentablemente tenemos un limite. No por eso nos vamos
                   a detener! Siempre estaremos intentando traer nuevas ricas comidas!</p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
-              <h4><a href={% url 'listado_bebidas' %}>Bebidas</a></h4>
+              <h4><a>Bebidas</a><a style="font-size: 12px; margin-left:10px" href={% url 'listado_bebidas' %}>(Leer más)</a></h4>
               <p>Elige tu bebida favorita y deleitate con su sabor!</p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
-              <h4><a href={% url 'listado_empleados' %}>Empleados</a></h4>
+              <h4><a>Empleados</a><a style="font-size: 12px; margin-left:10px" href={% url 'listado_empleados' %}>(Leer más)</a></h4>
               <p>En este apartado puedes encontrar informacion sobre las personas que trabajan con nosotros!</p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="400">
             <div class="icon-box">
-              <h4><a href={% url 'listado_mesas' %}>Mesas</a></h4>
+              <h4><a>Mesas</a><a style="font-size: 12px; margin-left:10px" href={% url 'listado_mesas' %}>(Leer más)</a></h4>
               <p>Aqui puedes reservar mesas e incluso saber cuales hay!</p>
             </div>
           </div>
