--- a/Restaurante/templates/listados/listado_bebidas.html
+++ b/Restaurante/templates/listados/listado_bebidas.html
@@ -9,6 +9,9 @@
 
 <ul style="text-align: left">
 
+
+{% if listado_bebidas %}
+
 {% for bebida in listado_bebidas %}
 
 <li>
@@ -19,9 +22,14 @@
     {% if bebida.chico %}
         Tamaño: Chica
     {% endif %}
+    <a href={% url "info_bebidas" bebida.id %}>Ver más</a>
+    <a href={% url "actualizar_bebida" bebida.id %}>Editar</a>
     <a href={% url "borrar_bebida" bebida.id %}>Borrar</a>
 </li>
 
-{% endfor %}    
+{% endfor %}   
+{% else %}
+    <h4 style="text-align: center; margin-center: 0px">No hay bebidas por el momento</h4>
+{% endif %} 
 </ul>
-{% endblock a %}
+{% endblock a %} h
