--- a/Restaurante/templates/listados/listado_comidas.html
+++ b/Restaurante/templates/listados/listado_comidas.html
@@ -21,6 +21,8 @@
     {% if comida.chico %}
         Tamaño: Chico
     {% endif %}
+    <a href={% url "info_comidas" comida.id %}>Ver más</a>
+    <a href={% url "actualizar_comida" comida.id %}>Editar</a>
     <a href={% url "borrar_comida" comida.id %}>Borrar</a>
 </li>
 
