--- a/Restaurante/templates/listados/listado_empleados.html
+++ b/Restaurante/templates/listados/listado_empleados.html
@@ -15,7 +15,8 @@
     {{empleado.nombre}}
     {{empleado.apellido}}
     Puesto: {{empleado.puesto}}
-    <a href={% url "actualizar_empleado" empleado.id %}>Actualizar</a>
+    <a href={% url "info_empleados" empleado.id %}>Ver más</a>
+    <a href={% url "actualizar_empleado" empleado.id %}>Editar</a>
     <a href={% url "borrar_empleado" empleado.id %}>Borrar</a>
 </li>
 
