--- a/Restaurante/templates/listados/listado_mesas.html
+++ b/Restaurante/templates/listados/listado_mesas.html
@@ -21,6 +21,8 @@
     {% if mesa.reservada %}
            Esta reservada
     {% endif %}
+    <a href={% url "info_mesas" mesa.id %}>Ver más</a>
+    <a href={% url "actualizar_mesa" mesa.id %}>Editar</a>
     <a href={% url "borrar_mesa" mesa.id %}>Borrar</a>
 </li>
 
