--- a/indice/templates/log2/editar_user.html
+++ b/indice/templates/log2/editar_user.html
@@ -8,9 +8,11 @@
     {{msj}}
 {% endif %}
 
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{form.as_p}}
+    <table>
+        {{form.as_table}}
+    </table>
     <button>Guardar</button>
 </form>
 
