--- a/indice/templates/log2/info_user.html
+++ b/indice/templates/log2/info_user.html
@@ -24,7 +24,7 @@
     Descripción: {{ user_extension_logued.more_description }}
 </p>
 {% endif %}
-{% if user_extension_logued.avatar.url %}
+{% if user_extension_logued.avatar %}
 <p>
     Avatar: <img src="{{user_extension_logued.avatar.url}}" alt="Imagen" height="100">
 </p>
